# open-crypto-db

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: pull_request.yml  push_main.yml
data/currencies/: bitcoin.toml
data/sources/: coinbase.toml
src/: log.rs  main.rs
